WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310869
macOS: Wheel events with no backing platform event can't start a swipe
https://bugs.webkit.org/show_bug.cgi?id=310869
Summary
macOS: Wheel events with no backing platform event can't start a swipe
Tim Horton
Reported
2026-03-27 01:28:48 PDT
macOS: Wheel events with no backing platform event can't start a swipe
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2026-03-27 01:28:50 PDT
<
rdar://problem/171300135
>
Tim Horton
Comment 2
2026-03-27 01:40:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61474
EWS
Comment 3
2026-03-29 16:38:50 PDT
Committed
310189@main
(fd843afddf6f): <
https://commits.webkit.org/310189@main
> Reviewed commits have been landed. Closing PR #61474 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug